# craftsmanship

./: Makefile  README.md  pyproject.toml
src/: statement.py
test/: conftest.py  test_customer_name.py  test_larger_plays.py  test_multiple_plays.py  test_play_types.py
